--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,27 @@
     <color name="mint">#98ff98</color>
     <color name="yellow_pleasing">#fff176</color>
 
+    <!-- Text colors -->
+    <color name="charcoal_text_title">#CC333333</color>
+    <color name="grey_text_body">#CC757575</color>
+    <color name="grey_text_heading">#CC616161</color>
+    <color name="grey_text_caption">#CC9e9e9e</color>
+    <color name="grey_text_subcaption">#CCbdbdbd</color>
+
+    <!-- Material Greys-->
+    <color name="grey_50">#FAFAFA</color>
+    <color name="grey_100">#f5f5f5</color>
+    <color name="grey_200">#EEEEEE</color>
+    <color name="grey_300">#E0E0E0</color>
+    <color name="grey_400">#bdbdbd</color>
+    <color name="grey_500">#9E9E9E</color>
+    <color name="grey_600">#757575</color>
+    <color name="grey_700">#616161</color>
+    <color name="grey_800">#424242</color>
+    <color name="grey_900">#212121</color>
+    <color name="grey_overlay">#7c000000</color>
+
+    <!-- Placeholder bg color for image -->
+    <color name="placeholder_bg_color">#e1e4eb</color>
+
 </resources>
