--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,12 +50,30 @@
         <item name="android:textColor">@color/grey_text_body</item>
     </style>
 
+    <style name="TextAppearance.Body.Large.Bold" parent="TextAppearance.Body.Large">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/grey_text_body</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TextAppearance.Body.Medium" parent="TextAppearance.Body.Large">
         <item name="android:textSize">14sp</item>
     </style>
 
     <style name="TextAppearance.Body.Small" parent="TextAppearance.Body.Medium">
         <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="TextAppearance.Link.Large" parent="TextAppearance.Body.Large">
+        <item name="android:textColor">@color/blue_500</item>
+    </style>
+
+    <style name="TextAppearance.Link.Medium" parent="TextAppearance.Body.Medium">
+        <item name="android:textColor">@color/blue_500</item>
+    </style>
+
+    <style name="TextAppearance.Link.Small" parent="TextAppearance.Body.Small">
+        <item name="android:textColor">@color/blue_500</item>
     </style>
 
 </resources>
