--- a/app/src/main/res/layout/view_black_friday_section_back.xml
+++ b/app/src/main/res/layout/view_black_friday_section_back.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            style="@style/TextAppearance.Body.Large.Bold"
+            style="@style/TextStyle.Cabin.Title.Dark"
             android:text="@string/black_friday_deals"
             android:paddingBottom="@dimen/padding_medium"
             android:visibility="invisible"
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                style="@style/TextAppearance.Body.Medium"
+                style="@style/TextStyle.Cabin.Caption.Medium"
                 android:text="@string/black_friday_url_hint"
                 android:paddingEnd="@dimen/padding_small"
                 android:visibility="invisible"
