--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="light_blue">#81d4Fa</color>
     <color name="fuchsia">#ff0080</color>
     <color name="mint">#98ff98</color>
-    <color name="yellow_pleasing">#fff176</color>
+    <color name="pacman_yellow">#fdff00</color>
     <color name="charcoal">#333333</color>
     <color name="aqua">#029aae</color>
     <color name="magenta">#e52050</color>
