Create view model for a single photo - will continue my work later

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,9 @@
 
     <data>
 
+        <import type="android.view.View"/>
+        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />
+
         <variable
             name="viewModel"
             type="laurcode.com.infiniteimagescroller.main.viewmodel.MainViewModel" />
