Add a bit of delay before showing the main activity. Tweak DAMPER and TENSION variables for button spring bounce effect.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,7 +50,7 @@
             tools:visibility="visible"
             app:indicatorName="PacmanIndicator"
             android:layout_centerInParent="true"
-            app:indicatorColor="@color/pacman_yellow" />
+            app:indicatorColor="@color/grellow" />
 
     </RelativeLayout>
 
